--- a/app/index.html
+++ b/app/index.html
@@ -1,52 +1,44 @@
-<!--
-   AngularJS is view template driven.
-   Because of this our index.html is very simple.
--->
-
-<!doctype html>
-<html lang="en">
-<head>
-    <base href="/" />
+<!DOCTYPE html>
+<html>
+  <head>
     <meta charset="utf-8">
-    <title>Angular-Todo App</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="fragment" content="!">
+    <title>Angular To-Do</title>
 
     <!--
-       Here we include the Angular JS library JS and the Angular UI-Router library.
-       Angular UI-Router is not a built in angular library but makes routing much easier.
-       In Angular 2, Angular adopts this concept of routing and it is included.
+           AngularJS library and the Angular UI-Router library
+           Angular UI-Router is not a built into angular but makes routing much easier
+           In Angular 2, Angular adopts this concept of routing and it is included
     -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <!-- Compiled and minified Materialize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <!-- Compiled and minified Materialize JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+  </head>
+  <!-- in the body  -->
+  <body ng-app="toDo">
 
-    <link rel="stylesheet" href="createAHero/layout/assets/styles/layout.css">
-</head>
-<body ng-app="toDo"> <!-- Note, this is important, the main module name is the app name -->
-<!-- The ui-view directive is provided by ui-router and is where our main view for our route will be injected -->
-<!--<ui-view></ui-view>-->
+    <ui-view></ui-view>
 
-<!-- We need to include EVERY JS file for our application here -->
-<script src="toDo/toDo.module.js"></script>
 
-<!--
-    A note on directory structure and organization. Keeping your Angular code organized and slim
-    is really important. Following the directory structure we have defined and recommend is following
-    recommendations from industry experts and larger organizations and open source projects!
-
-    appName/
-        features/ - All of our "features" of the app
-            featureName/ - Each feature gets its own space. Features can be (routes, components, services, etc)
-                featureName.directive.js - If the feature is a directive, you will have this
-                featureName.service.js - If the feature is a service, you will have this
-                featureName.controller.js - If the feature is a route/view, you will have this
-                featureName.route.js - If the feature is a route/view, you will have this
-                featureName.html - If the feature is a route/view, you will have this
-                featureName.module.js - Declare the module and its dependencies
-        appName.module.js - Main module declaration for our app
-    index.html - This file
--->
-</body>
+    <!-- Link EVERY JS file for our application here -->
+    <!-- main app module -->
+    <script src="toDo/toDo.module.js"></script>
+    <!-- list -->
+    <script src="toDo/features/list/list.module.js"></script>
+    <script src="toDo/features/list/list.controller.js"></script>
+    <script src="toDo/features/list/list.route.js"></script>
+    <!-- create -->
+    <script src="toDo/features/create/create.module.js"></script>
+    <script src="toDo/features/create/create.controller.js"></script>
+    <script src="toDo/features/create/create.route.js"></script>
+    <!-- completed -->
+    <script src="toDo/features/completed/completed.module.js"></script>
+    <script src="toDo/features/completed/completed.controller.js"></script>
+    <script src="toDo/features/completed/completed.route.js"></script>
+    
+  </body>
 </html>
