fixed file error

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,9 @@
     <script src="toDo/features/completed/completed.module.js"></script>
     <script src="toDo/features/completed/completed.controller.js"></script>
     <script src="toDo/features/completed/completed.route.js"></script>
+
+    <script src="toDo/features/components/listTamplate/listTamplate.module.js"></script>
+    <script src="toDo/features/components/listTamplate/listTamplate.directive.js"></script>
     
   </body>
 </html>
