--- a/app/toDo/features/create/create.html
+++ b/app/toDo/features/create/create.html
@@ -1,1 +1,15 @@
-this is a create.
+<!--div for the create state-->
+<div class="row">
+    <form class="col s8">
+        <div class="row">
+            <div class="input-field col s8">
+                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                <label for="textarea1">ToDo</label>
+                <!--date picker -->
+                <input type="date" class="datepicker">
+            </div>
+        </div>
+    </form>
+</div>
+<!--this is the submit button-->
+<button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
